[package]
name = "bobabyte_labs"
version = "0.1.0"
authors = ["Bob Chen <chenbobby168@gmail.com>"]
edition = "2018"

[[bin]]
name = "bl"
path = "src/main.rs"

[lib]
name = "bobabyte_labs"
path = "src/lib.rs"

[[bench]]
name = "simd"
harness = false

[profile.dev]
no-vectorize-loops = true

[dependencies]

[dev-dependencies]
criterion = "0.3.3"
rand = "0.7.3"
